# cmake-subdirectory-dependencies

./: CMakeLists.txt  Readme.md  main.cpp  testingcpp23.cpp
A/: A.cpp  A.hpp  CMakeLists.txt
B/: B.c  B.h  CMakeLists.txt
